--- a/app-detector/Dockerfile
+++ b/app-detector/Dockerfile
@@ -1,24 +1,13 @@
-# Set base image (host OS)
 FROM python:3.12-alpine
 
-# By default, listen on port 5000
-EXPOSE 5000/tcp
-
-# Set the working directory in the container
 WORKDIR /app
-
-# Copy the dependencies file to the working directory
 COPY requirements.txt .
-
-# Install any dependencies
 RUN pip install -r requirements.txt
-
-# Copy the content of the local src directory to the working directory
 COPY .env .
 COPY app.py .
 COPY detector.py .
-COPY static /app/static
-COPY templates /app/templates
+COPY static ./static
+COPY templates ./templates
 
-# Specify the command to run on container start
-CMD [ "python", "./app.py" ]
+EXPOSE 5000/tcp
+CMD [ "python", "app.py" ]
